Fixed opening sidebar on mobile devices

--- a/client/scheme.less
+++ b/client/scheme.less
@@ -15,7 +15,7 @@ input, textarea {
 
 
 .messages {
-  border-left-color: @base03;
+  border-color: @base03;
 }
 
 .nick {
@@ -58,9 +58,9 @@ input, textarea {
 
 #sidebar {
   background: @base01;
-  border-left-color: @base03;
+  border-color: @base03;
 }
 
 #chatform {
-  border-top-color: @base03;
+  border-color: @base03;
 }
