--- a/client/style.less
+++ b/client/style.less
@@ -150,6 +150,6 @@ ul {
 		top: 0.5em;
 		bottom: auto;
 		right: 0.5em;
-		border-left: none;
+		border: none;
 	}
 }
